# TraceGuard

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  JUDGE_EVIDENCE.md  LICENSE  PROJECT_VISUALIZATION.md  README.md  SUBMISSION.md  pyproject.toml  requirements-production.txt
deploy/: cloud-run.ps1  docker-gcloud.ps1  full-production.ps1  image-cloud-run.ps1  local-verify.ps1  set-auth-secret.ps1  set-phoenix-secret.ps1
docs/: demo-video-shotlist.md  hosted-live-proof.md  latest-run-receipt.json  phoenix-runtime-proof.json
samples/: README.md  gcp_incident_bundle.txt  gcp_low_signal_control_bundle.txt  gcp_storage_exfil_bundle.txt
tests/: test_agent.py  test_auth_server.py  test_deploy_hygiene.py  test_frontend_static.py
traceguard/: __init__.py  adk_agent.py  agent.py  auth.py  config.py  evals.py  gemini_adapter.py  improvement.py  models.py  observability.py  parsers.py  phoenix_mcp.py  report.py  scoring.py  server.py
web/: app.js  index.html  styles.css
