[project]
name = "traceguard"
version = "0.1.0"
description = "TraceGuard: my evidence-driven cloud security triage agent for the Google Cloud Rapid Agent Hackathon."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Max" }]

[project.optional-dependencies]
production = [
  "google-genai==1.72.0",
  "arize-phoenix-otel==0.16.1",
  "google-adk==1.34.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
